# obj-det-metrics

./: .flake8  .gitignore  .pre-commit-checks  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
obj_det_metrics/: ap_map.py  ingest.py  utils.py  variables.py
tests/: test_ap_map.py  test_ingest.py  test_utils.py
tests/fixtures/test_detections/: test1.txt  test2.txt
tests/fixtures/test_ground_truths/: test1.txt  test2.txt
