[tool.poetry]
name = "obj-det-metrics"
version = "0.2.0"
description = "Simple package to compute metrics for object detection"
authors = ["yxlee245 <yxlee245@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/yxlee245/obj-det-metrics"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18"
pipe = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
mypy = "^0.910"
isort = "^5.9.3"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
pre-commit = "^2.14.0"
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
'''

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100

[tool.isort]
profile = "black"
